--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.rahmatez.me/" />
-    <meta property="og:title" content="Rahmat Ashari - Expert Full Stack Developer Portfolio" />
+    <meta property="og:title" content="Rahmat Ashari - Portfolio" />
     <meta property="og:description" content="Professional Full Stack Developer with expertise in Laravel, React.js, Node.js. Explore my portfolio featuring 20+ projects, AWS & Google Cloud certifications, and comprehensive web development solutions." />
     <meta property="og:image" content="https://www.rahmatez.me/assets/rahmatez.png" />
     <meta property="og:image:alt" content="Rahmat Ashari - Full Stack Developer" />
@@ -41,7 +41,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://www.rahmatez.me/" />
-    <meta property="twitter:title" content="Rahmat Ashari - Expert Full Stack Developer Portfolio" />
+    <meta property="twitter:title" content="Rahmat Ashari - Portfolio" />
     <meta property="twitter:description" content="Professional Full Stack Developer specializing in Laravel, React.js, Node.js with 20+ projects and multiple certifications." />
     <meta property="twitter:image" content="https://www.rahmatez.me/assets/rahmatez.png" />
     <meta property="twitter:creator" content="@rahmatez" />
